first section done

--- a/index.html
+++ b/index.html
@@ -8,12 +8,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="flexible">
+        <div class="half-width">
+            <div class="half-width-content">
+                <div id="mission"></div>
+                <h1>Stay Focused on</h1>
+                <h1><span class="span-text">Mission 2022</span></h1>
+            
+                    <p class="about-explore">
+                        I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
+                    </p>
+                    <a href="#" class="button" target="blank">Explore Now</a>
+                    <p class="scroll">Scroll down to know more about us.</p>
+                </div>    
+                </div>
+        <div class="half-width">
+            <div class="half_-width-content">
+                <img src="images/person/person-2.png" alt="Men in Black">
+            </div>
+        </div>
+    </section>
     <section>
-        <h1>Stay Focused on</h1>
-        <h1>Mission 2022</h1>
+
     </section>
 </body>
 </html>
