section two is done

--- a/index.html
+++ b/index.html
@@ -20,22 +20,59 @@
                 <div id="mission"></div>
                 <h1>Stay Focused on</h1>
                 <h1><span class="span-text">Mission 2022</span></h1>
-            
-                    <p class="about-explore">
-                        I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
-                    </p>
-                    <a href="#" class="button" target="blank">Explore Now</a>
-                    <p class="scroll">Scroll down to know more about us.</p>
-                </div>    
+            </div>  
+                <div class="para-text">
+                <p class="about-explore">
+                    I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
+                </p>
+                <a href="#" class="button" target="blank">Explore Now</a>
+                <p class="scroll">Scroll down to know more about us.</p>
+                </div>
+                
                 </div>
         <div class="half-width">
-            <div class="half_-width-content">
+            <div class="half-width-content">
                 <img src="images/person/person-2.png" alt="Men in Black">
             </div>
         </div>
     </section>
-    <section>
-
+    <section id="boxes">
+        <h2>My Mission in <span class="span-text">2022</span></h2>
+            <div class="flexible">
+                    <div class="mission-content">
+                        <div class="mission-image">
+                            <img src="/images/illustrators/illustrator-1.png" alt="Mission 1">
+                        </div>
+                        <div class="mission-text">
+                            <h3>Mission</h3>
+                            <p class="about-explore">
+                                I am in a mission where I am learning how to code. How to make a website from zero. For that reason I am here to make myself better in the long run.
+                            </p>
+                        </div>
+                    </div>
+            <div class="vission-content">
+                <div class="vission-image">
+                    <img src="/images/illustrators/illustrator-2.png" alt="Mission 2">
+                </div>
+                <div class="vission-text">
+                    <h3>Vission</h3>
+                    <p class="about-explore">
+                        I will be a successful developer. My vission is to be a successful developer. One day they will call me a great developer. They will come to me to solve their problem.
+                    </p> 
+                </div>
+            </div>
+            <div class="goals-content">
+                <div class="vission-image">
+                    <img src="/images/illustrators/illustrator-3.png" alt="Mission 3">
+                </div>
+                <div class="Goals-text">
+                    <h3>Goals</h3>
+                    <p class="about-explore">
+                       MY goal is to become a full-stack developer. For which I am working on my portfolio. Because one day its going to speak in front of the world.
+                    </p>
+                </div>
+            </div>
+    </div>
     </section>
 </body>
 </html>
