third section added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </section>
-    <section id="boxes">
+    <section class="boxes">
         <h2>My Mission in <span class="span-text">2022</span></h2>
             <div class="flexible">
                     <div class="mission-content">
@@ -74,5 +74,32 @@
             </div>
     </div>
     </section>
+    <section class="bg">
+       <div class="boxes">
+        <div class="flexible ">
+            <div class="fourty">
+              <img src="/images/pictures/coding.png" alt="Coder"> 
+            </div>
+            <div class="sixty">
+                
+                <div class="para-text">
+                           <p> <span> Develop</span> <br> 
+                            <span> Without Limit</span> </p> 
+                    <p class="about-explore">
+                        I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
+                    </p>
+                    <a href="#" class="button" target="blank">Read The Documentation</a>
+                    </div>
+            </div>
+        </div>
+       </div>
+    </section>
+    <section class="bg-1">
+        <div class="flexible">
+            <div class="sixty"></div>
+        </div>
+
+    </section>
+
 </body>
 </html>
