section four completed

--- a/index.html
+++ b/index.html
@@ -74,32 +74,42 @@
             </div>
     </div>
     </section>
-    <section class="bg">
-       <div class="boxes">
-        <div class="flexible ">
-            <div class="fourty">
-              <img src="/images/pictures/coding.png" alt="Coder"> 
-            </div>
-            <div class="sixty">
-                
-                <div class="para-text">
-                           <p> <span> Develop</span> <br> 
-                            <span> Without Limit</span> </p> 
-                    <p class="about-explore">
-                        I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
-                    </p>
-                    <a href="#" class="button" target="blank">Read The Documentation</a>
+    <section id="bg">
+        <div class="boxes">
+            <div class="flexible ">
+                <div class="fourty">
+                    <img src="/images/pictures/coding.png" alt="Coder"> 
+                </div>
+                <div class="sixty"> 
+                    <div class="para-text">
+                                <p> <span> Know Our</span> <br> 
+                                <span> Global Community</span> </p> 
+                        <p class="about-explore">
+                            I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
+                        </p>
+                        <a href="#" class="button" target="blank">Read The Documentation</a>
                     </div>
+                </div>
             </div>
         </div>
-       </div>
     </section>
-    <section class="bg-1">
-        <div class="flexible">
-            <div class="sixty"></div>
+    <div id="bg1">
+        <div class="boxes">
+            <div class="flexible ">
+                <div class="sixty">                  
+                                <p> <span> Develop</span> <br> 
+                                <span> Without Limit</span> </p> 
+                        <p class="about-explore" id="without-limit">
+                            I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
+                        </p>
+                        <a href="#" class="button" target="blank">Read The Documentation</a>
+                    </div>
+                <div class="fourty second">
+                    <img src="/images/pictures/project.png" alt="PROJECT"> 
+                </div>              
+            </div>
         </div>
-
-    </section>
+    </div>
 
 </body>
 </html>
