--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -80,15 +83,13 @@
                 <div class="fourty">
                     <img src="/images/pictures/coding.png" alt="Coder"> 
                 </div>
-                <div class="sixty"> 
-                    <div class="para-text">
-                                <p> <span> Know Our</span> <br> 
-                                <span> Global Community</span> </p> 
+                <div class="sixty " id="develop">                  
+                                <p> <span>Develop</span> <br> 
+                                <span> Without Limits</span> </p> 
                         <p class="about-explore">
                             I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
                         </p>
                         <a href="#" class="button" target="blank">Read The Documentation</a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -97,8 +98,8 @@
         <div class="boxes">
             <div class="flexible ">
                 <div class="sixty">                  
-                                <p> <span> Develop</span> <br> 
-                                <span> Without Limit</span> </p> 
+                                <p> <span> Know Our </span> <br> 
+                                <span> Global Community</span> </p> 
                         <p class="about-explore" id="without-limit">
                             I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
                         </p>
@@ -110,6 +111,13 @@
             </div>
         </div>
     </div>
+
+
+
+    <footer>
+        <h2>Mission <span class="red">2022</span></h2>
+        <p class="footer-Para">Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
 
 </body>
 </html>
