--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="half-width">
             <div class="half-width-content">
                 <div id="mission"></div>
-                <h1>Stay Focused on</h1>
-                <h1><span class="span-text">Mission 2022</span></h1>
+                <h1 id="focus">Stay Focused on</h1>
+                <h1 id="focus"><span class="span-text">Mission 2022</span></h1>
             </div>  
                 <div class="para-text">
                 <p class="about-explore">
@@ -111,6 +111,25 @@
             </div>
         </div>
     </div>
+    <section >
+        <h1 id="own-part">Build <span class="span-text">Corona App</span></h1>
+        <div class="boxes flexible">
+            <div class="half-width">
+                <img src="images/person/person-2.png" alt="Men in Black">
+        </div>
+        <div class="half-width">
+                    <h1>Stay Focused on</h1>
+                    <h1><span class="span-text">Mission 2022</span></h1>
+                <p class="about-explore">
+                    I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
+                </p>
+                <a href="#" class="button" target="blank">Explore Now</a>
+               
+        </div>
+        </div>
+       
+
+    </section>
 
 
 
