--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p class="about-explore">
                     I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
                 </p>
-                <a href="#" class="button" target="blank">Explore Now</a>
+                <a href="https://web.programming-hero.com/" class="button" target="blank">Explore Now</a>
                 <p class="scroll">Scroll down to know more about us.</p>
                 </div>
                 
@@ -89,7 +89,7 @@
                         <p class="about-explore">
                             I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
                         </p>
-                        <a href="#" class="button" target="blank">Read The Documentation</a>
+                        <a href="https://web.programming-hero.com/" class="button" target="blank">Read The Documentation</a>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@
                                 <p> <span> Know Our </span> <br> 
                                 <span> Global Community</span> </p> 
                         <p class="about-explore" id="without-limit">
-                            I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
+                           The people or nations of the world, considerded as being closely connected by modern telecommunications and as being economically, socially ans politically interdependent.Global Communities delivers essential solutions to complex challenges from the intersection of humanitarian assistance, sustainable development and financial inclusion. 
                         </p>
                         <a href="#" class="button" target="blank">Read The Documentation</a>
                     </div>
@@ -112,18 +112,18 @@
         </div>
     </div>
     <section >
-        <h1 id="own-part">Build <span class="span-text">Corona App</span></h1>
+        <h1 id="own-part">Learn<span class="span-text"> Web Development</span></h1>
         <div class="boxes flexible">
             <div class="half-width">
-                <img src="images/person/person-2.png" alt="Men in Black">
+                <img id="own-img" src="images/rr.jpg" alt="Developer">
         </div>
         <div class="half-width">
-                    <h1>Stay Focused on</h1>
-                    <h1><span class="span-text">Mission 2022</span></h1>
+                    <h1>Keep Focusing </h1>
+                    <h1>On <span class="span-text">Leaning </span></h1>
                 <p class="about-explore">
-                    I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
+                    I am in a mission where I am learning how to code. I am with Jhankar Mahbub vai to learn and explore carrer path of web development. I am here to make myself better in the long run. To do things make easier and make content easier to understand there is no one like Jhankar Mahbub vai.
                 </p>
-                <a href="#" class="button" target="blank">Explore Now</a>
+                <a href="https://web.programming-hero.com/" class="button" target="blank">Learn More</a>
                
         </div>
         </div>
