--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="half-width">
             <div class="half-width-content">
                 <div id="mission"></div>
-                <h1 id="focus">Stay Focused on</h1>
-                <h1 id="focus"><span class="span-text">Mission 2022</span></h1>
+                <h1 class="focus">Stay Focused on</h1>
+                <h1 class="focus"><span class="span-text">Mission 2022</span></h1>
             </div>  
                 <div class="para-text">
                 <p class="about-explore">
@@ -84,8 +84,8 @@
                     <img src="/images/pictures/coding.png" alt="Coder"> 
                 </div>
                 <div class="sixty " id="develop">                  
-                                <p> <span>Develop</span> <br> 
-                                <span> Without Limits</span> </p> 
+                                <h4> Develop <br> 
+                                 Without Limits </h4> 
                         <p class="about-explore">
                             I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
                         </p>
@@ -98,12 +98,12 @@
         <div class="boxes">
             <div class="flexible ">
                 <div class="sixty">                  
-                                <p> <span> Know Our </span> <br> 
-                                <span> Global Community</span> </p> 
+                                <h4>  Know Our <br> 
+                                Global Community </h4> 
                         <p class="about-explore" id="without-limit">
                            The people or nations of the world, considerded as being closely connected by modern telecommunications and as being economically, socially ans politically interdependent.Global Communities delivers essential solutions to complex challenges from the intersection of humanitarian assistance, sustainable development and financial inclusion. 
                         </p>
-                        <a href="#" class="button" target="blank">Read The Documentation</a>
+                        <a href="https://web.programming-hero.com/" class="button" target="blank">Read The Documentation</a>
                     </div>
                 <div class="fourty second">
                     <img src="/images/pictures/project.png" alt="PROJECT"> 
@@ -118,8 +118,8 @@
                 <img id="own-img" src="images/rr.jpg" alt="Developer">
         </div>
         <div class="half-width">
-                    <h1>Keep Focusing </h1>
-                    <h1>On <span class="span-text">Leaning </span></h1>
+                    <h5>Keep Focusing </h5>
+                    <h5>On <span class="span-text">Leaning </span></h5>
                 <p class="about-explore">
                     I am in a mission where I am learning how to code. I am with Jhankar Mahbub vai to learn and explore carrer path of web development. I am here to make myself better in the long run. To do things make easier and make content easier to understand there is no one like Jhankar Mahbub vai.
                 </p>
