polishing is going

--- a/index.html
+++ b/index.html
@@ -42,40 +42,40 @@
     <section class="boxes">
         <h2>My Mission in <span class="span-text">2022</span></h2>
             <div class="flexible">
-                    <div class="mission-content">
-                        <div class="mission-image">
-                            <img src="/images/illustrators/illustrator-1.png" alt="Mission 1">
+                        <div class="mission-content">
+                            <div class="mission-image">
+                                <img src="/images/illustrators/illustrator-1.png" alt="Mission 1">
+                            </div>
+                            <div class="mission-text">
+                                <h3>Mission</h3>
+                                <p class="about-explore">
+                                    I am in a mission where I am learning how to code. How to make a website from zero. For that reason I am here to make myself better in the long run.
+                                </p>
+                            </div>
                         </div>
-                        <div class="mission-text">
-                            <h3>Mission</h3>
-                            <p class="about-explore">
-                                I am in a mission where I am learning how to code. How to make a website from zero. For that reason I am here to make myself better in the long run.
-                            </p>
-                        </div>
+                <div class="vission-content">
+                    <div class="vission-image">
+                        <img src="/images/illustrators/illustrator-2.png" alt="Mission 2">
                     </div>
-            <div class="vission-content">
-                <div class="vission-image">
-                    <img src="/images/illustrators/illustrator-2.png" alt="Mission 2">
+                    <div class="vission-text">
+                        <h3>Vission</h3>
+                        <p class="about-explore">
+                            I will be a successful developer. My vission is to be a successful developer. One day they will call me a great developer. They will come to me to solve their problem.
+                        </p> 
+                    </div>
                 </div>
-                <div class="vission-text">
-                    <h3>Vission</h3>
-                    <p class="about-explore">
-                        I will be a successful developer. My vission is to be a successful developer. One day they will call me a great developer. They will come to me to solve their problem.
-                    </p> 
-                </div>
-            </div>
-            <div class="goals-content">
-                <div class="vission-image">
-                    <img src="/images/illustrators/illustrator-3.png" alt="Mission 3">
-                </div>
-                <div class="Goals-text">
-                    <h3>Goals</h3>
-                    <p class="about-explore">
-                       MY goal is to become a full-stack developer. For which I am working on my portfolio. Because one day its going to speak in front of the world.
-                    </p>
+                <div class="goals-content">
+                    <div class="vission-image">
+                        <img src="/images/illustrators/illustrator-3.png" alt="Mission 3">
+                    </div>
+                        <div class="Goals-text">
+                            <h3>Goals</h3>
+                                <p class="about-explore">
+                                    MY goal is to become a full-stack developer. For which I am working on my portfolio. Because one day its going to speak in front of the world.
+                                </p>
+                        </div>
                 </div>
             </div>
-    </div>
     </section>
     <section id="bg">
         <div class="boxes">
@@ -84,8 +84,7 @@
                     <img src="/images/pictures/coding.png" alt="Coder"> 
                 </div>
                 <div class="sixty " id="develop">                  
-                                <h4> Develop <br> 
-                                 Without Limits </h4> 
+                                <h4> Develop <br>  Without Limits </h4> 
                         <p class="about-explore">
                             I am in a mission where I am learning how to code. I am currently working on a website that will help people find the best of me in the city. That will help the people to reach me and help me to grow. I am here to make myself better in the long run.
                         </p>
@@ -100,9 +99,9 @@
                 <div class="sixty">                  
                                 <h4>  Know Our <br> 
                                 Global Community </h4> 
-                        <p class="about-explore" id="without-limit">
-                           The people or nations of the world, considerded as being closely connected by modern telecommunications and as being economically, socially ans politically interdependent.Global Communities delivers essential solutions to complex challenges from the intersection of humanitarian assistance, sustainable development and financial inclusion. 
-                        </p>
+                                    <p class="about-explore" id="without-limit">
+                                    The people or nations of the world, considerded as being closely connected by modern telecommunications and as being economically, socially ans politically interdependent.Global Communities delivers essential solutions to complex challenges from the intersection of humanitarian assistance, sustainable development and financial inclusion. 
+                                    </p>
                         <a href="https://web.programming-hero.com/" class="button" target="blank">Read The Documentation</a>
                     </div>
                 <div class="fourty second">
@@ -113,21 +112,18 @@
     </div>
     <section >
         <h1 id="own-part">Learn<span class="span-text"> Web Development</span></h1>
-        <div class="boxes flexible">
-            <div class="half-width">
-                <img id="own-img" src="images/rr.jpg" alt="Developer">
-        </div>
+            <div class="boxes flexible">
+                <div class="half-width">
+                    <img id="own-img" src="images/rr.jpg" alt="Developer">
+            </div>
         <div class="half-width">
-                    <h5>Keep Focusing </h5>
-                    <h5>On <span class="span-text">Leaning </span></h5>
-                <p class="about-explore">
-                    I am in a mission where I am learning how to code. I am with Jhankar Mahbub vai to learn and explore carrer path of web development. I am here to make myself better in the long run. To do things make easier and make content easier to understand there is no one like Jhankar Mahbub vai.
-                </p>
-                <a href="https://web.programming-hero.com/" class="button" target="blank">Learn More</a>
-               
+                        <h5>Keep Focusing </h5>
+                        <h5>On <span class="span-text">Leaning </span></h5>
+                            <p class="about-explore">
+                                I am in a mission where I am learning how to code. I am with Jhankar Mahbub vai to learn and explore carrer path of web development. I am here to make myself better in the long run. To do things make easier and make content easier to understand there is no one like Jhankar Mahbub vai.
+                            </p>
+                    <a href="https://web.programming-hero.com/" class="button" target="blank">Learn More</a>
         </div>
-        </div>
-       
 
     </section>
 
