polishing is going

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div id="bg1">
         <div class="boxes">
             <div class="flexible ">
-                <div class="sixty">                  
+                <div class="sixty" id="know-part">                  
                                 <h4>  Know Our <br> 
                                 Global Community </h4> 
                                     <p class="about-explore" id="without-limit">
@@ -130,7 +130,7 @@
 
 
     <footer>
-        <h2>Mission <span class="red">2022</span></h2>
+        <h2>Mission <span class="footer-year">2022</span></h2>
         <p class="footer-Para">Hard work, Perseverance, and Determination for 2022</p>
     </footer>
 
