polishing is going

--- a/index.html
+++ b/index.html
@@ -93,23 +93,25 @@
             </div>
         </div>
     </section>
-    <div id="bg1">
-        <div class="boxes">
-            <div class="flexible ">
-                <div class="sixty" id="know-part">                  
-                                <h4>  Know Our <br> 
-                                Global Community </h4> 
-                                    <p class="about-explore" id="without-limit">
-                                    The people or nations of the world, considerded as being closely connected by modern telecommunications and as being economically, socially ans politically interdependent.Global Communities delivers essential solutions to complex challenges from the intersection of humanitarian assistance, sustainable development and financial inclusion. 
-                                    </p>
-                        <a href="https://web.programming-hero.com/" class="button" target="blank">Read The Documentation</a>
-                    </div>
-                <div class="fourty second">
-                    <img src="/images/pictures/project.png" alt="PROJECT"> 
-                </div>              
+    <section>
+        <div id="bg1">
+            <div class="boxes">
+                <div class="flexible ">
+                    <div class="sixty" id="know-part">                  
+                                    <h4>  Know Our <br> 
+                                    Global Community </h4> 
+                                        <p class="about-explore" id="without-limit">
+                                        The people or nations of the world, considerded as being closely connected by modern telecommunications and as being economically, socially ans politically interdependent.Global Communities delivers essential solutions to complex challenges from the intersection of humanitarian assistance, sustainable development and financial inclusion. 
+                                        </p>
+                            <a href="https://web.programming-hero.com/" class="button" target="blank">Read The Documentation</a>
+                        </div>
+                    <div class="fourty second">
+                        <img src="/images/pictures/project.png" alt="PROJECT"> 
+                    </div>              
+                </div>
             </div>
-        </div>
     </div>
+    </section>
     <section >
         <h1 id="own-part">Learn<span class="span-text"> Web Development</span></h1>
             <div class="boxes flexible">
