polishing is going

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="flexible">
                         <div class="mission-content">
                             <div class="mission-image">
-                                <img src="/images/illustrators/illustrator-1.png" alt="Mission 1">
+                                <img src="images/illustrators/illustrator-1.png" alt="Mission 1">
                             </div>
                             <div class="mission-text">
                                 <h3>Mission</h3>
@@ -55,7 +55,7 @@
                         </div>
                 <div class="vission-content">
                     <div class="vission-image">
-                        <img src="/images/illustrators/illustrator-2.png" alt="Mission 2">
+                        <img src="images/illustrators/illustrator-2.png" alt="Mission 2">
                     </div>
                     <div class="vission-text">
                         <h3>Vission</h3>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="goals-content">
                     <div class="vission-image">
-                        <img src="/images/illustrators/illustrator-3.png" alt="Mission 3">
+                        <img src="images/illustrators/illustrator-3.png" alt="Mission 3">
                     </div>
                         <div class="Goals-text">
                             <h3>Goals</h3>
@@ -81,7 +81,7 @@
         <div class="boxes">
             <div class="flexible ">
                 <div class="fourty">
-                    <img src="/images/pictures/coding.png" alt="Coder"> 
+                    <img src="images/pictures/coding.png" alt="Coder"> 
                 </div>
                 <div class="sixty " id="develop">                  
                                 <h4> Develop <br>  Without Limits </h4> 
@@ -106,7 +106,7 @@
                             <a href="https://web.programming-hero.com/" class="button" target="blank">Read The Documentation</a>
                         </div>
                     <div class="fourty second">
-                        <img src="/images/pictures/project.png" alt="PROJECT"> 
+                        <img src="images/pictures/project.png" alt="PROJECT"> 
                     </div>              
                 </div>
             </div>
